--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -32,6 +32,12 @@
 <td>
 <a href="#" data-th-href="@{/materialverwaltung/{id}(id=${lagerstandort.id})}">Materialien Verwalten</a>
 </td>
+<td>
+<a href="#" data-th-href="@{/lieferungview/{id}(id=${lagerstandort.id})}">Letzte Lieferungen</a>
+</td>
+<td>
+<a href="#" data-th-href="@{/buchungview/{id}(id=${lagerstandort.id})}">Letzte Buchungen</a>
+</td>
 </tr>
 </table>
 </div>
