--- a/src/main/resources/templates/veranstaltunggebucht.html
+++ b/src/main/resources/templates/veranstaltunggebucht.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+
+<head th:fragment="head">
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
+	<title th:text="@{${@environment.getProperty('matilda.events')}}" />
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-<title>Buchungen</title>
+ 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+ 	<link rel="import" href="/fragment/topnav.html">
 </head>
-<body>
+	<body>
+		<head th:replace="/fragment/header :: header"></head>	
+		<div th:replace="/fragment/footer :: footer"></div>
 <h1>Buchung Übersicht</h1>
 <div th:unless="${#lists.isEmpty(veranstaltunggebucht)}">
 <table class="table table-striped">
@@ -35,8 +39,15 @@
 </table>
 </div>
 <hr/>
-
-
-<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+<form action="#" th:action="@{/veranstaltungstornieren}" th:object="${veranstaltung}" method="post">
+<p><input type="submit" value="Stornieren" /> </p>
+</form>
+<div class="container">
+	<div th:if="${param.nostorno}">
+		<div class="alert alert-info">
+			Stornieren einer Veranstaltung ist nur im Gebuchtzustand möglich!
+		</div>
+	</div>
+</div>
 </body>
+</html>
