--- a/src/main/resources/templates/veranstaltung.html
+++ b/src/main/resources/templates/veranstaltung.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<title th:text="@{${@environment.getProperty('matilda.events')}}" />
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" th:href="@{/css/index.css}"/>
@@ -14,6 +13,9 @@
 	<body>
 		<head th:replace="/fragment/header :: header"></head>	
 		<div th:replace="/fragment/footer :: footer"></div>
+		
+		<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
+		
 <a href="#" data-th-href="@{/neuveranstaltung}">Eine neue Veranstaltung hinzufügen</a>
 <h2>Übersicht Veranstaltungen</h2>
 <div th:unless="${#lists.isEmpty(veranstaltungen)}">
